--- a/FESlinkTree/style/main.css
+++ b/FESlinkTree/style/main.css
@@ -1,115 +1,115 @@
-    body {
-        /*maybe another font*/
-        font-family: 'Josefin Sans';
-        margin: 0;
-        padding: 15px;
-        background-color: rgb(20, 16, 25);
-      }
-      .wrap {
-        width: 100%;
-        max-width: 320px;
-        margin: 0 auto;
-      }
-      .profile {
-        text-align: center;
-        color: #FFF;
-        margin-bottom: 20px;
-      }
-      /*.photo {*/
-      /*  height: 200px;*/
-      /*  width: 100%;*/
+body {
+  /*maybe another font*/
+font-family: 'DM Sans', sans-serif;
+  margin: 0;
+  padding: 15px;
+  background-color: rgb(20, 16, 25);
+}
+.wrap {
+  width: 100%;
+  max-width: 320px;
+  margin: 0 auto;
+}
+.profile {
+  text-align: center;
+  color: #FFF;
+  margin-bottom: 20px;
+}
+/*.photo {*/
+/*  height: 200px;*/
+/*  width: 100%;*/
 
-      /*}*/
-      .img{
-        /*height: 100%;*/
-        /*width: 100%;*/
-        /*border-radius: 50%;*/
-          padding: 50px 50px;
-        /*background: url("https://user-images.githubusercontent.com/69011963/137184767-79a13ec7-1bb3-4341-a6da-3a149c9c159a.gif");*/
-        background-position: center;
-        background-size: cover;
-        margin: 0 auto;
-              /*can modify the padding to make the nav bigger or smaller*/
-    /*padding: 9px;*/
-    max-width: 180px;
-    height: auto;
-      top: 500px;
+/*}*/
+.img{
+  /*height: 100%;*/
+  /*width: 100%;*/
+  /*border-radius: 50%;*/
+    padding: 50px 50px;
+  /*background: url("https://user-images.githubusercontent.com/69011963/137184767-79a13ec7-1bb3-4341-a6da-3a149c9c159a.gif");*/
+  background-position: center;
+  background-size: cover;
+  margin: 0 auto;
+        /*can modify the padding to make the nav bigger or smaller*/
+/*padding: 9px;*/
+max-width: 180px;
+height: auto;
+top: 500px;
 
-      }
+}
 
-  #main_logo {
-    /*can modify the padding to make the nav bigger or smaller*/
-    /*padding: 9px;*/
-    max-width: 200px;
-    height: auto;
-      top: 500px;
+#main_logo {
+/*can modify the padding to make the nav bigger or smaller*/
+/*padding: 9px;*/
+max-width: 200px;
+height: auto;
+top: 500px;
 
-    }
+}
 
-      .profile_name {
-        font-weight: bold;
-        display: block;
-        margin: 4px 0;
-      }
-      .at {
-          font-size: 100%;
-      }
+.profile_name {
+  font-weight: bold;
+  display: block;
+  margin: 4px 0;
+}
+.at {
+    font-size: 100%;
+}
 
 .custom-btn {
-      font-size: 88%;
-  width: 100%;
-  height: 45px;
-  color: #fff;
-  border-radius: 5px;
-  padding: 10px 25px;
-  font-family: 'Josefin Sans';
-  font-weight: 500;
-  background: transparent;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  position: relative;
-  display: block;
-   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-   7px 7px 20px 0px rgba(0,0,0,.1),
-   4px 4px 5px 0px rgba(0,0,0,.1);
-  outline: none;
+font-size: 88%;
+width: 100%;
+height: 45px;
+color: #fff;
+border-radius: 5px;
+padding: 10px 25px;
+/*font-family: 'Josefin Sans';*/
+font-weight: 500;
+background: transparent;
+cursor: pointer;
+transition: all 0.3s ease;
+position: relative;
+display: block;
+box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+7px 7px 20px 0px rgba(0,0,0,.1),
+4px 4px 5px 0px rgba(0,0,0,.1);
+outline: none;
 }
 
 
 
 .btn-8 {
-  background-color: #f0ecfc;
-  /*the colors of the tabs here*/
-  background-image: linear-gradient(270deg, #f0ecfc 0%, #4169E1 39%);
-  line-height: 42px;
-  padding: 0;
-  margin: 14px 0;
-  border: none;
+background-color: #f0ecfc;
+/*the colors of the tabs here*/
+background-image: linear-gradient(270deg, #f0ecfc 0%, #4169E1 39%);
+line-height: 42px;
+padding: 0;
+margin: 14px 0;
+border: none;
 
 }
 .btn-8 span {
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 100%;
+position: relative;
+display: block;
+width: 100%;
+height: 100%;
 }
 .btn-8 span a{
-  text-decoration: none;
-  color: black;
+text-decoration: none;
+color: black;
 }
 .btn-8:before,
 .btn-8:after {
-  position: absolute;
-  content: "";
-  right: 0;
-  bottom: 0;
-  /*here*/
-  /*background: #4169E1;*/
-  /*box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
-              -4px -4px 6px 0 rgba(116, 125, 136, .2),
-    inset -4px -4px 6px 0 rgba(255,255,255,.5),
-    inset 4px 4px 6px 0 rgba(116, 125, 136, .3);*/
-  transition: all 0.3s ease;
+position: absolute;
+content: "";
+right: 0;
+bottom: 0;
+/*here*/
+/*background: #4169E1;*/
+/*box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+        -4px -4px 6px 0 rgba(116, 125, 136, .2),
+inset -4px -4px 6px 0 rgba(255,255,255,.5),
+inset 4px 4px 6px 0 rgba(116, 125, 136, .3);*/
+transition: all 0.3s ease;
 }
 /*.btn-8:before{*/
 /*   height: 0%;*/
@@ -162,45 +162,148 @@
 /*}*/
 /*     Social Icons    */
 .sociaicon{
-  display: flex;
-    flex-wrap: wrap;
-    -webkit-box-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+display: flex;
+flex-wrap: wrap;
+-webkit-box-pack: center;
+justify-content: center;
+-webkit-box-align: center;
+align-items: center;
+width: 100%;
+height: 100%;
 }
 .socialsanimate{
-  transition: transform 0s cubic-bezier(0.23, 1, 0.32, 1) 0s;
-  z-index: 0;
+transition: transform 0s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+z-index: 0;
 }
 
 .socialsalign{
-  padding-left: 22px;
-  padding-right: 22px;
-  color: inherit;
-  text-decoration: underline;
+padding-left: 22px;
+padding-right: 22px;
+color: inherit;
+text-decoration: underline;
 }
 .socialsanimate svg {
-    pointer-events: none;
+pointer-events: none;
 }
 .socialssvg{
-    margin-top: 8px;
-    fill: rgb(255, 254, 254);
-    width: 32px;
-    height: 32px;
+margin-top: 8px;
+fill: rgb(255, 254, 254);
+width: 32px;
+height: 32px;
 }
 
 /* Remove the blue color */
 a:link,
 a:visited {
-  color: black; /* You can use any color you prefer */
-  text-decoration: none; /* Remove underline if desired */
+color: black; /* You can use any color you prefer */
+text-decoration: none; /* Remove underline if desired */
 }
 
 
 /* Remove the red color after clicking */
 a:active {
-  color: black; /* Change to the desired color after clicking */
+color: black; /* Change to the desired color after clicking */
 }
+
+
+
+/*Animated background*/
+
+.wrap::before{
+content: "";
+width: 50%;
+height: 50%;
+border-radius: 100%;
+box-shadow: 0 -150px 400px #000044;
+position: fixed;
+bottom: -50%;
+left: 25%;
+z-index: -1;
+}
+
+.wrap::after{
+content: "";
+width: 50%;
+height: 50%;
+border-radius: 100%;
+box-shadow: 0 150px 300px #000044;
+position: fixed;
+top: -50%;
+left: 25%;
+z-index: -1;
+animation: animate_1 10s infinite;
+}
+
+body::before{
+content: "";
+width: 50%;
+height: 100%;
+border-radius: 100%;
+box-shadow: 0 0 500px 450px #000000;
+position: fixed;
+top: 0;
+left: -50%;
+z-index: -1;
+animation: animate_2 10s infinite;
+}
+
+body::after{
+content: "";
+width: 50%;
+height: 100%;
+border-radius: 100%;
+box-shadow: 0 0 500px 450px #000000;
+position: fixed;
+top: 0;
+right: -50%;
+z-index: -1;
+animation: animate_3 10s infinite;
+}
+
+/* Let's Create Animation */
+@keyframes animate_1{
+25%{
+box-shadow: 0 150px 300px #000044;
+}
+50%{
+box-shadow: 0 150px 300px #000000;
+}
+75%{
+box-shadow: 0 150px 300px #000000;
+}
+100%{
+box-shadow: 0 150px 300px #000044;
+}
+}
+
+@keyframes animate_2{
+25%{
+box-shadow: 0 0 500px 450px #000000;
+}
+50%{
+box-shadow: 0 0 500px 450px #000000;
+}
+75%{
+box-shadow: 0 0 500px 450px #000044;
+}
+100%{
+box-shadow: 0 0 500px 450px #000000;
+}
+}
+
+@keyframes animate_3{
+25%{
+box-shadow: 0 0 500px 450px #000000;
+}
+50%{
+box-shadow: 0 0 500px 450px #000044;
+}
+75%{
+box-shadow: 0 0 500px 450px #000000;
+}
+100%{
+box-shadow: 0 0 500px 450px #000000;
+}
+}
+
+/*end of Animated background settings*/
